<resources>
    <string name="app_name">Parse App Challenge</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="header">Active Requests</string>
    <string name="title">Title</string>
    <string name="creator">Creator</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="add_request">Add Request</string>
    <string name="post_request">Post request</string>
    <string name="connection_error">Please check your internet connection and try again</string>
    <string name="save_soon">Your request will be saved when you get online again</string>
</resources>