<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/layout_note"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_item"
    android:theme="@style/Theme.ParseAppChallenge"

    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:includeFontPadding="false"
        android:textSize="15sp"
        android:text="@string/title"
        />

    <TextView
        android:id="@+id/tv_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:text="@string/creator"
        />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:text="@string/description"
        />
    <TextView
        android:id="@+id/tv_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:includeFontPadding="false"
        android:textSize="12sp"
        android:text="@string/date"
        />
</LinearLayout>