<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.ParseAppChallenge"
    android:background="?colorOnPrimary"
    tools:context=".CreateRequestActivity">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/add_request"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:padding="3dp"
        android:background="@drawable/background_input"
        />
    <!-- TODO: Implement create request form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textViewHeader"
        android:layout_marginTop="30dp"
        >
        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/background_input"
            android:hint="@string/title"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:padding="10dp"
            />



        <EditText
            android:id="@+id/et_creator"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/background_input"
            android:hint="@string/creator"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:padding="10dp"

            />
        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/background_input"
            android:hint="@string/description"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/btn_post_request"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/post_request"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>